--- a/projects/CarbCounterPlusAngular/app/sass/pages/_carbcalc.scss
+++ b/projects/CarbCounterPlusAngular/app/sass/pages/_carbcalc.scss
@@ -2,6 +2,7 @@
   align-items: center;
   display: flex;
   flex: 1;
+  flex-flow: column nowrap;
   justify-content: space-between;
   margin-bottom: 0.625em; 
 }
