--- a/projects/FTTL/CSS/stylesheet.css
+++ b/projects/FTTL/CSS/stylesheet.css
@@ -12,7 +12,7 @@ a {
 }
 
 body {
-    background: #FAFAFA;
+    background: #4380C8;
 }
 
 h1 {
@@ -34,7 +34,7 @@ p {
 /*Header Block*/
 
 .background__img {
-    background: url(backgrounds/mobile_header.jpg) no-repeat top;
+    background: url(backgrounds/mobile_header.jpg) no-repeat 0px -50px;
     background-size: cover;
     box-shadow: 0 5px 20px rgba(0, 0, 0, 0.4);
     display: -webkit-box;
@@ -76,7 +76,7 @@ p {
 }
 
 .hamburger__icon {
-    background: #333233;
+    background: #FAFAFA;
     border-radius: 25px;
     height: 20%;
     margin: 0 auto;
@@ -107,10 +107,10 @@ p {
 }
 
 .nav__item a {
-    color: #333233;
+    color: #fff;
     display: block;
     font-size: 32px;
-    font-weight: 700;
+    font-weight: 600;
     text-align: center;
     text-decoration: none;
     padding: 0.2em;
