--- a/main.css
+++ b/main.css
@@ -395,6 +395,11 @@ html {
   width: 40px;
 }
 
+.twitter-logo, .github-logo, .codepen-logo {
+  width: 40px;
+  height: 40px;
+}
+
 
 @media only screen and (min-width: 500px) {
   .menu {
